# jq-coder-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md
spikes/jaq_vs_jq/: resultado.json  spike.py
src/: executor.rs  gravar.rs  inferencia.rs  lib.rs  main.rs  modelo.rs  prompt.rs  repl.rs
tests/: cli.rs  compat_bench.rs  integracao.rs  paridade.rs
tests/fixtures/: limpeza_casos.json  prompt_casos.json
tools/: exportar_fixtures.py
