[package]
name = "jqc"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Natural language to jq filters — 100% offline, single binary (jq-coder)"
repository = "https://github.com/EdelmarSchneider/jq-coder-cli"
homepage = "https://huggingface.co/DominuZ/jq-coder-0.6B"
readme = "README.md"
keywords = ["jq", "json", "llm", "offline", "cli"]
categories = ["command-line-utilities"]

[features]
# vulkan é ligada nos releases Windows/Linux; macOS usa Metal (default do llama.cpp)
vulkan = ["llama-cpp-2/vulkan"]
# testes que baixam artefatos reais da rede (modelo, jq-bench)
integracao = []

[dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2"
serde_json = "1"
regex = "1"
jaq-core = "3"
jaq-std = "3"
jaq-json = { version = "2", features = ["serde"] }
wait-timeout = "0.2"
dirs = "6"
ureq = "3"
indicatif = "0.18"
llama-cpp-2 = "0.1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
